--- a/css/style.css
+++ b/css/style.css
@@ -8,5 +8,30 @@
 
 /*GENERAL*/
 
+body {
+    font-family: 'Fredoka', sans-serif;
+}
 
+.container {
+    max-width: 1000px;
+    margin: auto;
+    border: 5px solid black;
+}
 
+.pink-color {
+    color: #E53170;;
+}
+
+.background-cards {
+    background-color: black;
+}
+/*HEADER*/
+
+header {
+    text-align: center;
+}
+
+header h1,p {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
