--- a/css/style.css
+++ b/css/style.css
@@ -30,11 +30,7 @@ body {
 }
 
 .email-color {
-    color: #2C5D65;
-}
-
-.padding-bottom{
-    padding-bottom: 20px;
+    color: rgba(88, 88, 219, 0.722);
 }
 
 .clearfix::after {
@@ -44,10 +40,6 @@ body {
   }
 
 
-
-.float-right{
-    float: right;
-}
 /*HEADER*/
 
 header {
@@ -63,11 +55,11 @@ header h1,p {
 
 
  .single-card {
-    width: calc((100% / 3)-20px);
+    width: calc((100% / 3) - 20px);
     height: 100px;
+    margin-bottom: 50px;
  }   
     
-
 
 img {
     height: 100px;
@@ -77,12 +69,17 @@ img {
     float: left;
 }
 
+.single-card > *{
+    float: left;
+}
+
 div:nth-child(3n+2) {
     margin-left: 20px;
     margin-right: 20px;
 }
 
-
-
+h3,h5{
+    margin-bottom: 10px;
+}
 
 
